--- a/package.json
+++ b/package.json
@@ -1,16 +1,45 @@
 {
     "name": "@uig/traduora-ri18n",
-    "version": "0.1.0",
-    "main": "app.js",
+    "version": "0.2.0",
+    "description": "i18n-js wrapper with traduora service",
+    "author": {
+        "name": "Łukasz Micał",
+        "email": "lucas@uigstudio.com"
+    },
+    "license": "ISC",
     "private": false,
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint": "eslint './src/**/*.{js,ts,tsx}'",
+        "test": "jest",
+        "test:watch": "jest --watchAll",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "start": "npm link && nodemon"
     },
     "repository": {
         "type": "git",
         "url": "git@github.com:UIGStudio/traduora-ri18n.git"
     },
-    "author": "",
-    "license": "ISC",
-    "description": ""
+    "keywords": [
+        "react",
+        "traduora"
+    ],
+    "devDependencies": {
+        "@types/jest": "26.0.16",
+        "@typescript-eslint/eslint-plugin": "4.9.0",
+        "@typescript-eslint/parser": "4.9.0",
+        "eslint": "7.14.0",
+        "eslint-config-prettier": "6.15.0",
+        "eslint-plugin-prettier": "3.1.4",
+        "jest": "^26.6.3",
+        "prettier": "2.2.1",
+        "typescript": "4.1.2",
+        "node-fetch": "^2.6.1",
+        "ts-jest": "^26.4.4"
+    },
+    "files": [
+        "dist/**/*"
+    ]
 }
