--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@uig/traduora-ri18n",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "i18n-js wrapper with traduora service",
     "author": {
         "name": "Łukasz Micał",
@@ -26,7 +26,11 @@
         "react",
         "traduora"
     ],
+    "dependencies": {
+        "i18n-js": "^3.8.0"
+    },
     "devDependencies": {
+        "@types/i18n-js": "^3.0.3",
         "@types/jest": "26.0.16",
         "@typescript-eslint/eslint-plugin": "4.9.0",
         "@typescript-eslint/parser": "4.9.0",
@@ -34,10 +38,10 @@
         "eslint-config-prettier": "6.15.0",
         "eslint-plugin-prettier": "3.1.4",
         "jest": "^26.6.3",
-        "prettier": "2.2.1",
-        "typescript": "4.1.2",
         "node-fetch": "^2.6.1",
-        "ts-jest": "^26.4.4"
+        "prettier": "2.2.1",
+        "ts-jest": "^26.4.4",
+        "typescript": "4.1.2"
     },
     "files": [
         "dist/**/*"
